--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ django-utils==0.0.2
 django-utils-six==2.0
 djongo==1.2.31
 dnspython==2.4.2
+psycopg2==2.9.9
 pymongo==4.6.0
+python-dotenv==1.0.0
 pytz==2023.3.post1
 sqlparse==0.4.4
 tzdata==2023.3
